--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
 language: python
 python: "3.5"
-install: pip install -r requirements-dev.txt
+install: pip install -r requirements-test.txt
 script: python manage.py test
