--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
 language: python
 python: "3.5"
 install: pip install -r requirements-test.txt
-script: python manage.py migrate && python manage.py test
+before_script: python manage.py migrate
+script: python manage.py test
