Start using coverage

--- a/tox.ini
+++ b/tox.ini
@@ -1,8 +1,22 @@
 [tox]
-envlist = py35
+envlist = coverage-clean,py35,coverage-report
 
 
 [testenv]
 deps =
     -rrequirements-test.txt
-commands = python manage.py test
+commands = coverage run manage.py test
+
+
+[testenv:coverage-clean]
+deps = coverage
+skip_install = true
+commands = coverage erase
+
+
+[testenv:coverage-report]
+deps = coverage
+skip_install = true
+commands =
+    coverage report
+    coverage html
