--- a/tox.ini
+++ b/tox.ini
@@ -8,6 +8,12 @@ deps =
 commands = coverage run manage.py test
 
 
+[testenv:flake8]
+deps = flake8
+skip_install = true
+commands = flake8 src tests setup.py
+
+
 [testenv:coverage-clean]
 deps = coverage
 skip_install = true
