--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,8 @@
 language: python
 python: "3.5"
+services:
+  - postgresql
 install: pip install -r requirements-test.txt
+before_script:
+  - psql -c 'create database django-amber-test;' -U postgres
 script: python manage.py test -v3
