--- a/.travis.yml
+++ b/.travis.yml
@@ -4,5 +4,5 @@ services:
   - postgresql
 install: pip install -r requirements-test.txt
 before_script:
-  - psql -c 'create database django-amber-test;' -U postgres
+  - psql -c 'create database "django-amber-test";' -U postgres
 script: python manage.py test -v3
